# Aegisshield

./: .gitignore  LICENSE  Makefile  README.md  test_aegis.sh
.github/workflows/: ci.yml
configs/: aegis.yaml  grafana-dashboard.json  minecraft.yaml
control-plane/: go.mod  go.sum
control-plane/cmd/aegis/: main.go
control-plane/cmd/aegisd/: main.go
control-plane/internal/alerts/: notifier.go
control-plane/internal/api/: server.go  server_test.go
control-plane/internal/bgp/: session.go
control-plane/internal/bpf/: clock_linux.go  clock_other.go  maps.go  maps_integration_test.go  maps_test.go
control-plane/internal/config/: config.go  config_test.go
control-plane/internal/engine/: detector.go  engine.go  engine_test.go  responder.go
control-plane/internal/metrics/: prometheus.go
data-plane/: Cargo.toml
data-plane/aegis-common/: Cargo.toml
data-plane/aegis-common/src/: lib.rs
data-plane/aegis-ebpf/: Cargo.toml
data-plane/aegis-ebpf/src/: acl.rs  conntrack.rs  dns_filter.rs  fragment_filter.rs  gre_filter.rs  icmp_filter.rs  main.rs  syn_proxy.rs  udp_filter.rs
data-plane/aegis-userspace/: Cargo.toml
data-plane/aegis-userspace/src/: config.rs  main.rs  maps.rs  web_dashboard.rs
data-plane/xtask/src/: main.rs
deploy/: aegisshield.service  install.sh  nginx-ddos.conf  setup-l7-proxy.sh
deploy/scripts/: install.sh
deploy/systemd/: aegis-xdp.service  aegisd.service
l7-proxy/: haproxy.cfg
l7-proxy/lua/: http2_shield.lua  ja4_fingerprint.lua  rate_limiter.lua
scripts/: update-tor-blocklist.sh
tests/: live_blocklist_check.sh  stress_test.py
(+4 files in other folders)
